feat(frontend): show game result in 1v1 watch
